[package]
name = "craes"
version = "0.0.1"
authors = ["Daniel Bischof <daniel.bischof@protonmail.com>"]
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
tokio = "0.1.22"
tracing = "0.1.10"
tracing-futures = {path = "../tracing/tracing-futures"}
tracing-fmt = {path = "../tracing/tracing-fmt"}
futures = "0.1"
tungstenite = "0.9.1"
tokio-tungstenite = "0.9.0"
capnp = "0.10.3"
capnp-futures = "0.10.1"
stacker = "*"
boolinator = "*"

[build-dependencies]
capnpc = "0.10.1"
