[package]
name = "craes"
version = "0.0.1"
authors = ["Daniel Bischof <daniel.bischof@protonmail.com>"]
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
tokio = "0.1"
futures = "0.1"
tungstenite = "*"
tokio-tungstenite = "*"
capnp = "0.10"
capnp-futures = "0.10"
stacker = "*"
boolinator = "*"
dotenv = "*"
tokio-postgres = "0.4.0-rc.3"
tokio-threadpool = "*"
chrono = "*"
http = "*"
tracing = "0.1"
tracing-futures = "0.1"
tracing-subscriber = "0.1"

[build-dependencies]
capnpc = "0.10"
